Update styles-equipment.css oh the align issues

--- a/assets/css/styles-equipment.css
+++ b/assets/css/styles-equipment.css
@@ -164,11 +164,12 @@ p {
 }
 
 .list {
-      align: left;
+      align-content: left;
 }
 
 .list ul {
       font-family: 'Teko', sans-serif;
+      font-size: 30px;
 }
 
 footer {
